--- a/Agent-Core-Final/build.gradle
+++ b/Agent-Core-Final/build.gradle
@@ -1,5 +1,10 @@
 
+plugins {
+	id 'findbugs'
+}
+
 allprojects {
+
 	repositories {
 		maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 		maven { url rootProject.file('lib/') }
@@ -12,6 +17,7 @@ allprojects {
 
 	apply plugin: 'java'
 	apply plugin: 'maven'
+	apply plugin: 'findbugs'
 
 	sourceCompatibility = 1.8
 	targetCompatibility = 1.8
@@ -20,6 +26,32 @@ allprojects {
 		options.encoding = 'UTF-8'
 	}
 
+	// bug finding setup
+	findbugs {
+
+		// use this one ... reduce ambiguities
+		toolVersion = "3.0.1"
+		
+		// keep running, even if we've found bugs
+		ignoreFailures = true
+
+		// dump (all) the reports here
+    reportsDir = file("$rootProject.buildDir/wikibugs/findbugs-$project.name")
+
+		// tell me all the bugs
+		reportLevel = "low"
+
+		// find all of the bugs
+		effort = "max"
+	}
+	
+	// tweak the task to write XML
+	tasks.withType(FindBugs) {
+    reports {
+        xml.enabled true
+        html.enabled false
+    }
+	}
 }
 
 task run(type: JavaExec, dependsOn: [classes, test]) {
@@ -47,25 +79,31 @@ dependencies {
 	compile 'org.json:json:20160807'
 	compile 'javax.json:javax.json-api:1.0'
 	compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version:'3.7.0', classifier:'models'
+
+	compile project(':DM_Tools:QAM')
+
+	compile 'eu.aria.util:Input-Types:0.1'
 	compile(group: 'hmi.flipper', name: 'flipper2', version:'0.1') {
 		exclude(module: 'slf4j-log4j12')
 		exclude(module: 'log4j')
 	}
-	compile 'qamatcher:QAMatcher:1.0'
-	compile 'eu.aria.util:Input-Types:0.1'
 	compile(group: 'eu.aria.util', name: 'Translator', version:'0.1') {
 		exclude(module: 'slf4j-log4j12')
 	}
+	
 	compile 'edu.stanford.nlp:stanford-corenlp:3.7.0'
 	compile 'javax.jms:javax.jms-api:2.0.1'
 	compile 'org.glassfish:javax.json:1.0.4'
-	testCompile 'org.hamcrest:hamcrest-core:1.3'
 	compile 'org.jeasy:easy-rules-core:3.0.0'
+	
+	testCompile 'org.hamcrest:hamcrest-core:1.3'
 	testCompile 'junit:junit:4.12'
+	
+	compile 'com.squareup.okhttp3:okhttp:3.9.1'
+	compile 'dom4j:dom4j:1.1'
 	compile(group: 'org.apache.activemq', name: 'activemq-all', version:'5.15.1') {
 		exclude(module: 'slf4j-log4j12')
 		exclude(module: 'log4j')
 	}
-	compile 'com.squareup.okhttp3:okhttp:3.9.1'
-	compile 'dom4j:dom4j:1.1'
+	
 }
